--- a/01HTML/250124flex/flex01.html
+++ b/01HTML/250124flex/flex01.html
@@ -64,6 +64,18 @@
                 box3
             </div>
         </div>
+    </div><div class="wrapper">
+        <div class="boxWrap">
+            <div class="box1">
+                box1
+            </div>
+            <div class="box2">
+                box2
+            </div>
+            <div class="box3">
+                box3
+            </div>
+        </div>
     </div>
 </body>
 </html>
